--- a/CSS/search.css
+++ b/CSS/search.css
@@ -1,38 +1,38 @@
 .bloc-text {
-  margin-top: 25px;
-  margin-left: 55px;
-  line-height: 15px;
+  margin: 25px 0 32px 55px;
 }
 
 .bloc-text p {
-  font-size: 16px;
+  font-size: 23px;
+  line-height: 0;
 }
   
 .forms {
   display: flex;
-  margin: 20px 0 10px 55px;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 0 20px 55px;
+  width: 30%;
+  max-width: 100%;
 }
  
 .forms i.fa-solid.fa-location-dot {
   background-color: var(--color-clear-gray);
   border-top-left-radius: 12px;
   border-bottom-left-radius: 12px;
-  padding: 17px;
-  font-size: 17px;
+  padding: 22px;
+  font-size: 25px;
 }
  
 .forms input {
   background-color: #FFFFFF;
-  font-size: 18px;
   font-weight: bold;
   color: #000000;
-  width: 17%;
   padding-left: 12px;
-  border: 2px solid var(--color-clear-gray);
-}
- 
-.forms .btn-mobile {
-  display: none;
+  font-size: 27px; 
+  max-width: 100%;
+  border: 1px solid var(--color-clear-gray);
+  padding: 17px;
 }
  
 .forms .search {
@@ -42,21 +42,23 @@
   font-weight: bold;
   border-bottom-right-radius: 15px;
   border-top-right-radius: 15px;
-  padding-right: 10px;
-  width: 10%;
-  font-size: 17px;
+  padding: 20px;
+  font-size: 22px;
+}
+
+#btn-mobile {
+  display: none;
 }
 
 .filters {
   display: flex;
   flex-wrap: wrap;
-  align-items: baseline;  
+  align-items: baseline; 
 }
 
 .filters h3 {
-  margin-left: 61px;
-  margin-right: 36px;
-  font-size: 18px;
+  margin: 0 30px 0 55px;
+  font-size: 25px;
 }
 
 .filters ul {
@@ -80,18 +82,18 @@
   align-items: center;
   background-color: var(--color-clear-blue);
   color: var(--color-blue);
-  border-radius: 25px;
-  font-size: 19px;
-  padding: 15px;
+  border-radius: 30px;
+  font-size: 22px;
+  padding: 21px;
   position: absolute; 
 }
  
 .filters ul li a {
   text-decoration: none;
-  font-size: 18px;
+  font-size: 24px;
   color: #000000;
   font-weight: bold;
-  padding: 12px 21px 12px 59px;
+  padding: 16px 22px 16px 85px;
 }
 
 .filters ul li a:hover {
@@ -101,10 +103,12 @@
 }
 
 #font-info {
-  display: flex; 
+  display: flex;
+  margin-left: 55px; 
 }
  
 #font-info a {
+  font-size: 21px;
   color: #000000;
   text-decoration: none;
 }
@@ -115,6 +119,5 @@
   border: solid 1px var(--color-picker-gray);
   padding: 4px 8px 4px 8px;
   border-radius: 20px;
-  font-size: small; 
-  margin-left: 60px;
+  font-size: small;
 } 
