refacto:css-html

--- a/CSS/activity.css
+++ b/CSS/activity.css
@@ -7,8 +7,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 57px;
-  justify-content: space-between;
-  padding: 0 50px;
+  margin: 0 0 40px 60px;
 }
 
 .activity-container .activity-marseille {
@@ -20,6 +19,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  margin-right: 35px;
 }
 
 .activity-container .activity-marseille .container-cards1 .card {
@@ -38,7 +38,7 @@
 .activity-container .activity-marseille .container-cards1 .card a .card-image img {
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-  width: 410px;
+  width: 345px;
   height: 485px;
   object-fit: cover;
 }
@@ -58,13 +58,14 @@
   flex-wrap: wrap;
   flex-direction: column;
   padding-bottom: 40px;
+  margin-right: 35px;
 }
 
 .activity-container .activity-marseille .container-cards2 .card {
   background-color: #FFFFFF;
   border-radius: 25px;
   box-shadow: 3px 3px 15px var(--color-picker-gray);
-  width: 410px;
+  width: 345px;
 }
 
 .activity-container .activity-marseille .container-cards2 .card a {
@@ -104,7 +105,7 @@
   background-color: #FFFFFF;
   border-radius: 25px;
   box-shadow: 3px 3px 15px var(--color-picker-gray);
-  width: 410px;
+  width: 345px;
 }
 
 .activity-container .activity-marseille .container-cards3 .card a {
@@ -143,6 +144,7 @@
   flex-wrap: wrap;
   flex-direction: column;
   height: 427px;
+  margin-right: 35px;
 }
 
 .activity-container .activity-marseille .container-cards4 .card {
@@ -162,7 +164,7 @@
 .activity-container .activity-marseille .container-cards4 .card a .card-image img {
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-  width: 410px;
+  width: 345px;
   height: 485px;
   object-fit: cover;
   object-position: 44% 10%;
@@ -190,7 +192,7 @@
   background-color: #FFFFFF;
   border-radius: 25px;
   box-shadow: 3px 3px 15px var(--color-picker-gray);
-  width: 410px;
+  width: 345px;
 }
 
 .activity-container .activity-marseille .container-cards5 .card a {
@@ -230,7 +232,7 @@
   background-color: #FFFFFF;
   border-radius: 25px;
   box-shadow: 3px 3px 15px var(--color-picker-gray);
-  width: 410px;
+  width: 345px;
 }
 
 .activity-container .activity-marseille .container-cards6 .card a {
